crates/sui-prover/tests/snapshots/prettyprint-struct.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures assertion does not hold
   ┌─ tests/inputs/prettyprint-struct.move:21:5
   │
21 │     ensures(res.b != x);
   │     ^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/prettyprint-struct.move:19: foo_spec
